Updates image URL

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <img style="width: 48vw" src="/couscous.jpg" id="1" />
-  <img style="width: 48vw" src="/logo512.png" id="2">
+  <img style="width: 48vw" src="couscous.jpg" id="1" />
+  <img style="width: 48vw" src="logo512.png" id="2">
   <script>
     webgazer.setGazeListener(function (data, elapsedTime) {
       console.log(xprediction)
